# willitload-engine

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  willitload-engine-spec.md
docs/: contract.md  sample_reports.md
src/willitload/: __init__.py  __main__.py  check.py  cli.py  core.py  models.py  types.py
src/willitload.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/willitload/baseline/: __init__.py  ddl.py  fingerprint.py  flat.py  from_json.py  golden.py
src/willitload/tier0/: __init__.py  duckdb_reader.py  encoding.py  format_detect.py  parsers.py  physical.py  resolver.py
src/willitload/tier1/: __init__.py  anomalies.py  canonicalize.py  cluster.py
src/willitload/tier2/: __init__.py  infer.py  sampler.py
tests/: benchmark_perf.py  test_baseline.py  test_check.py  test_ddl.py  test_excel.py  test_expected_outputs.py  test_integrity.py  test_models.py  test_revisions.py  test_tier0.py  test_tier1.py  test_tier2.py  test_types.py
tests/expected_outputs/: archive_set.json  clean_conforming.json  column_drift.json  delimiter_drift.json  encoding_zoo.json  extension_lying.json  header_chaos.json  ragged.json  type_drift.json
tests/fixtures/: generate_fixtures.py
tests/fixtures/column_drift/: baseline.schema  orders_002.csv  orders_extra.csv  orders_missing.csv  orders_renamed.csv
tests/fixtures/delimiter_drift/: pipe.csv  semicolon.csv  tab.csv
tests/fixtures/encoding_zoo/: latin1.csv  utf16le.csv  utf8.csv  utf8_bom.csv
tests/fixtures/extension_lying/: looks_like_csv.csv  real.csv
(+1298 files in other folders)
